2004-03-24  Filip Navara  <xnavara@volny.cz>

	* include/commctrl.h (TB_GETSTRING[AW]): Add defines.
	(RBBS_HIDETITLE, RBBS_TOPALIGN): Ditto.

2004-03-24  Filip Navara  <xnavara@volny.cz>

	* include/ddk/srb.h (_PORT_CONFIGURATION_INFORMATION):	Rename
	TaggedQueueing to TaggedQueuing.
	(_HW_INITIALIZATION_DATA): Likewise.

2004-03-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/docobj.h (IOleDocumentView::GetDocument): Correct
	prototype.	
	Thanks to Buster Copley  <consequent@users.sourceforge.net>

2004-03-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/ddk/ntoskrnl.def (MmAllocatePagesForMdl): Correct suffix.
	(MmMapIoSpace): Likewise.
	Thanks to Dan Aloni  <da-x@colinux.org>

2004-03-16  Martin Fuchs  <martin-fuchs@gmx.net>

	* include/shellapi.h (NIM_* NIS_*): Define constants for
	notification icons with _WIN32_IE >= 0x0500.
	(NOTIFYICONDATA): Add new structure members for notification
	icons with _WIN32_IE >= 0x0500.

2004-03-13  Danny Smith  <dannysmith@users.sourceforge.net>

	*include/wininet.h (CACHEGROUP_SEARCH_ALL, CACHEGROUP_SEARCH_BYURL):
	Add defines.
	(INTERNET_CACHE_GROUP_ADD, INTERNET_CACHE_GROUP_REMOVE): Add defines.
	(GROUPID) Add typedef.
	(INTERNET_CACHE_GROUP_INFO[AW]): Define structures.
	(CreateUrlCacheGroup): Add prototype.
	(DeleteUrlCacheGroup): Add prototype.
	(FindFirstUrlCacheGroup): Add prototype.
	(FindNextUrlCacheGroup): Add prototype.
	(GetUrlCacheGroupAttribute[AW]): Add prototypes.
	(SetUrlCacheGroupAttribute[AW]): Add prototypes.

2004-03-10  Al Slater  <al.slater@scluk.com>

	* include/winsock2.h: Add missing LPFN_ typdefs for
	function pointers.
	Clean up whitespace.

2004-03-05  Filip Navara  <xnavara@volny.cz>

	* include/ddk/scsi.h: Replace assert with ASSERT.
	* include/ddk/video.h: Ditto.
	* include/ddk/winddk.h: Ditto. Remove the assert macro.
	* include/ddk/tdi.h: Correct packing.

2004-03-04  Danny Smith  <dannysmith@users.sourceforge.net>
