@@ -105,6 +105,16 @@ extern "C" {
 #define GLU_NURBS_ERROR36                  100286
 #define GLU_NURBS_ERROR37                  100287
 
+/* NurbsProperty */
+#define GLU_AUTO_LOAD_MATRIX               100200
+#define GLU_CULLING                        100201
+#define GLU_SAMPLING_TOLERANCE             100203
+#define GLU_DISPLAY_MODE                   100204
+#define GLU_PARAMETRIC_TOLERANCE           100202
+#define GLU_SAMPLING_METHOD                100205
+#define GLU_U_STEP                         100206
+#define GLU_V_STEP                         100207
+
 /* NurbsSampling */
 #define GLU_PATH_LENGTH                    100215
 #define GLU_PARAMETRIC_ERROR               100216
